  - FR #12349 - Swap tabs on System Maintenance page
  - FR #12345 - More user friendly admin session handling (partly implemented)
  - Browsing to the main admin page in a new browser tab during a running session won't redirect to login form anymore
  - Fix to admin redirection after login on Windows platform
  - BR #12338 - Allow http/2 responses 
  
FileManager v...
  - Dropzone improvement like core FilePicker.

FilePicker v...
  - BR #11673 - FilePicker will not show svg images, when in the Content Manager.

News v...
  - Minor code fix to encoding title content. 
  - BR #12322 - Stored Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.

Module Manager v...
  - BR #12324 - Stored Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.


Version 2.2.14 - T'Sou-ke
-------------------------------
Core - General
  - BR #12280 - Add Shortcut from Shortcuts modal broken.
  - Fixes to the class.CmsAdminThemeBase.php regarding main sections title and breadcrumbs generation.
  - Explicitly add function_exists and getimagesize functions to the allowed functions in PHP secure mode.
  - Improved Error Console template.
  - Site Prefs, remove submit confirmation.
  - System Maintenance, remove confirmation update page hierarchy positions and routes.
  - cms_http_request PHP 7.4 fix "Array and string offset access syntax with curly braces is deprecated".
  - Backend users, fixed the bulk actions.
  - BR #12172 - CronJobTrait undefined constants.
  - BR #12227 - Stored Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.
  - BR #12272 - Internal page link - selecting destination page problem.

AdminSearch v1.0.5
  - Remove click thru warning.
  
CMSContentManager v1.1.9
  - Fix notices in edit content template.
  - Fix notice in default admin view.

DesignManager v1.1.8