@@ -11,34 +11,34 @@ tinymce.init({
         resize : {mt_jsbool($mt_profile.allowresize)},
         statusbar : {mt_jsbool($mt_profile.showstatusbar)},
         menubar : {mt_jsbool($mt_profile.menubar)},
-        filepicker_title : '{$MT->Lang('filepickertitle')}',
+        filepicker_title : '{$MT->Lang('filepickertitle')|escape:javascript}',
         filepicker_url : '{$filepicker_url}&field=',
-        filebrowser_title : '{$MT->Lang('title_cmsms_filebrowser')}',
-        linker_text : '{$MT->Lang('cmsms_linker')}',
-        linker_title : '{$MT->Lang('title_cmsms_linker')}',
+        filebrowser_title : '{$MT->Lang('title_cmsms_filebrowser')|escape:javascript}',
+        linker_text : '{$MT->Lang('cmsms_linker')|escape:javascript}',
+        linker_title : '{$MT->Lang('title_cmsms_linker')|escape:javascript}',
         linker_image : '{$MT->GetModuleURLPath()}/lib/images/cmsmslink.gif',
         linker_url : '{$linker_url}',
         linker_autocomplete_url : '{$getpages_url}',
-	mailto_text : '{$MT->Lang('mailto_text')}',
-	mailto_title : '{$MT->Lang('mailto_image')}',
+	mailto_text : '{$MT->Lang('mailto_text')|escape:javascript}',
+	mailto_title : '{$MT->Lang('mailto_image')|escape:javascript}',
 	mailto_image : '{$MT->GetModuleURLPath()}/lib/images/mailto.gif',
-        prompt_page : '{$MT->Lang('prompt_linker')}',
-        prompt_page_info : '{$MT->Lang('info_linker_autocomplete')}',
-        prompt_alias : '{$MT->Lang('prompt_selectedalias')}',
-        prompt_alias_info : '{$MT->Lang('tooltip_selectedalias')}',
-        prompt_text : '{$MT->Lang('prompt_texttodisplay')}',
-        prompt_class : '{$MT->Lang('prompt_class')}',
-        prompt_rel : '{$MT->Lang('prompt_rel')}',
-        prompt_target : '{$MT->Lang('prompt_target')}',
-        prompt_insertmailto : '{$MT->Lang('prompt_insertmailto')}',
-        prompt_email : '{$MT->Lang('prompt_email')}',
-        prompt_anchortext : '{$MT->Lang('prompt_anchortext')}',
-        prompt_linktext : '{$MT->Lang('prompt_linktext')}',
-        tab_general : '{$MT->Lang('tab_general_title')}',
-        tab_advanced : '{$MT->Lang('tab_advanced_title')}',
-        target_none : '{$MT->Lang('none')}',
-        target_new_window : '{$MT->Lang('newwindow')}',
-        loading_info : '{$MT->Lang('loading_info')}'
+        prompt_page : '{$MT->Lang('prompt_linker')|escape:javascript}',
+        prompt_page_info : '{$MT->Lang('info_linker_autocomplete')|escape:javascript}',
+        prompt_alias : '{$MT->Lang('prompt_selectedalias')|escape:javascript}',
+        prompt_alias_info : '{$MT->Lang('tooltip_selectedalias')|escape:javascript}',
+        prompt_text : '{$MT->Lang('prompt_texttodisplay')|escape:javascript}',
+        prompt_class : '{$MT->Lang('prompt_class')|escape:javascript}',
+        prompt_rel : '{$MT->Lang('prompt_rel')|escape:javascript}',
+        prompt_target : '{$MT->Lang('prompt_target')|escape:javascript}',
+        prompt_insertmailto : '{$MT->Lang('prompt_insertmailto')|escape:javascript}',
+        prompt_email : '{$MT->Lang('prompt_email')|escape:javascript}',
+        prompt_anchortext : '{$MT->Lang('prompt_anchortext')|escape:javascript}',
+        prompt_linktext : '{$MT->Lang('prompt_linktext')|escape:javascript}',
+        tab_general : '{$MT->Lang('tab_general_title')|escape:javascript}',
+        tab_advanced : '{$MT->Lang('tab_advanced_title')|escape:javascript}',
+        target_none : '{$MT->Lang('none')|escape:javascript}',
+        target_new_window : '{$MT->Lang('newwindow')|escape:javascript}',
+        loading_info : '{$MT->Lang('loading_info')|escape:javascript}'
     },
     document_base_url: cmsms_tiny.base_url,
     relative_urls: true,
